Fix overflow card in company detail 🌻

--- a/core/styles/tailwind.css
+++ b/core/styles/tailwind.css
@@ -88,3 +88,28 @@ input::placeholder {
     background-position: right center;
 }
 
+#scrollbar-custom::-webkit-scrollbar{
+    width:10px;
+    background-color:#cccccc;
+}
+#scrollbar-custom::-webkit-scrollbar:horizontal{
+    height:10px;
+}
+#scrollbar-custom::-webkit-scrollbar-track{
+    border:0px #787878 solid;
+    border-radius:10px;
+    -webkit-box-shadow:0 0 6px #c8c8c8 inset;
+}
+#scrollbar-custom::-webkit-scrollbar-thumb{
+    background-color:#e6e6e6;
+    border:0px solid #000000;
+    border-radius:16px;
+}
+#scrollbar-custom::-webkit-scrollbar-thumb:hover{
+    background-color:#b0b0b0;
+    border:0px solid #333333;
+}
+#scrollbar-custom::-webkit-scrollbar-thumb:active{
+    background-color: #3b9fc5;
+    border:0px solid #333333;
+}
